# crashlog

./: CONTRIBUTING.md  LICENSE  README.md  SECURITY.md
app/: Cargo.toml  README.md
app/src/: decode.rs  extract.rs  info.rs  main.rs  unpack.rs
efi/: Cargo.toml  README.md
efi/src/: args.rs  decode.rs  extract.rs  main.rs  pager.rs
efi/src/pager/: input.rs  keys.rs  render.rs  update.rs  window.rs
lib/: Cargo.toml  README.md  build.rs
lib/collateral/ARL/CDH/all/all/crashlog/: target_info.json
lib/collateral/ARL/CDH/all/green/crashlog/decode-defs/MCA/2/: layout.csv
lib/collateral/ARL/CDS/all/all/crashlog/: target_info.json
lib/collateral/ARL/CDS/all/green/crashlog/decode-defs/MCA/1/: layout.csv
lib/collateral/LNC/all/all/all/crashlog/: target_info.json
lib/collateral/LNC/all/all/green/crashlog/decode-defs/PCORE/1/: layout_lbr.csv  layout_sq.csv  layout_thread.csv
lib/collateral/LNL/M/all/all/crashlog/: target_info.json
lib/collateral/LNL/M/all/green/crashlog/decode-defs/MCA/all/: layout.csv
lib/collateral/MTL/CD/all/all/crashlog/: target_info.json
lib/collateral/MTL/CD/all/green/crashlog/decode-defs/MCA/1/: layout.csv
lib/collateral/MTL/NM/all/all/crashlog/: target_info.json
lib/collateral/MTL/NM/all/green/crashlog/decode-defs/MCA/2/: layout.csv
lib/collateral/SKT/all/all/all/crashlog/: target_info.json
lib/collateral/SKT/all/all/green/crashlog/decode-defs/ECORE/1/: layout_core.csv  layout_module.csv
lib/collateral/XYZ/all/all/all/crashlog/: target_info.json
lib/collateral/all/all/all/green/crashlog/decode-defs/CRASHLOG_AGENT/1/: layout.csv
lib/src/: bert.rs  collateral.rs  cper.rs  crashlog.rs  error.rs  extract.rs  ffi.rs  header.rs  lib.rs  metadata.rs  node.rs  prelude.rs  record.rs  region.rs  utils.rs
lib/src/bert/: berr.rs  tests.rs
lib/src/collateral/: embedded.rs  fs.rs  path.rs  pvss.rs  target_info.rs
lib/src/cper/: fer.rs  tests.rs
lib/src/extract/: efi.rs  event_log.rs  sysfs.rs
lib/src/ffi/: tests.rs
lib/src/record/: core.rs  decode.rs
lib/tests/: agent.rs  collateral.rs  core.rs  crashlog.rs  ffi.rs  header.rs  mca.rs  node.rs  record.rs  region.rs
lib/tests/collateral/ABC/all/all/green/crashlog/: target_info.json
lib/tests/collateral/XYZ/all/all/green/crashlog/decode-defs/CRASHLOG_AGENT/io/1/: layout.csv
lib/tests/collateral/XYZ/all/all/green/crashlog/decode-defs/MCA/1/: layout.csv
lib/tests/collateral/XYZ/all/all/green/crashlog/decode-defs/MCA/all/: layout.csv
lib/tests/collateral/XYZ/all/all/green/crashlog/decode-defs/MCA/io/2/: layout.csv
lib/tests/samples/: cper.whea  dummy.bert  dummy_crashlog_agent_rev1.crashlog  dummy_mca_rev1.crashlog  dummy_mca_rev1_box.crashlog  dummy_mca_rev2.crashlog  invalid_recipe.crashlog  three_strike_timeout.crashlog  three_strike_timeout_box.crashlog
(+2 files in other folders)
